spacing fix

--- a/css/index.css
+++ b/css/index.css
@@ -569,12 +569,12 @@ h5.gall-text {
 
 /* effect ************************/
 
-.product .gallery_grids .gallery-img-grid{
+.product .gallery_grids .gallery-img-grid {
     overflow: hidden;
     position: relative;
 }
 
-.product .gallery_grids .gallery-img-grid .gallery_effect::before{
+.product .gallery_grids .gallery-img-grid .gallery_effect::before {
     content: "";
     width: 50%;
     height: 100%;
@@ -582,18 +582,17 @@ h5.gall-text {
     top: 0;
     left: -75%;
     display: block;
-    background: linear-gradient(
-        to right,
-        rgba(255, 255, 255, 0) 0%,
-        rgba(255, 255, 255, 0.3) 100%
-    );
+    background: linear-gradient(to right,
+            rgba(255, 255, 255, 0) 0%,
+            rgba(255, 255, 255, 0.3) 100%);
     transform: skewX(-17deg);
     transition: all 0.75s;
     z-index: 99;
 }
-.product .gallery_grids .gallery-img-grid .gallery_effect:hover::before{
-    left:125%;
-    
+
+.product .gallery_grids .gallery-img-grid .gallery_effect:hover::before {
+    left: 125%;
+
 }
 
 
@@ -885,10 +884,10 @@ ul {
     .column .gallery_effect figure .img-fluid {
         width: 100%;
     }
-    
+
     /* footer */
-    .footer .order-1 .subscribe button{
-        width:30%;
+    .footer .order-1 .subscribe button {
+        width: 30%;
     }
 }
 
@@ -965,13 +964,15 @@ ul {
         margin-top: 0;
     }
 
-    .product .no-gutters .btn{
+    .product .no-gutters .btn {
         /* margin-top: 0 !important; */
     }
-    .product .no-gutters h3{
-        font-size:32px;
+
+    .product .no-gutters h3 {
+        font-size: 32px;
     }
-    .product .no-gutters p{
+
+    .product .no-gutters p {
         margin-bottom: 0;
         font-family: 'Source Sans Pro';
     }
